--- a/documentation/latex/refman.tex
+++ b/documentation/latex/refman.tex
@@ -207,6 +207,10 @@
   % re-enable anchors again
   \hypersetup{pageanchor=true}
 %--- Begin generated contents ---
+\chapter{File Index}
+\input{files}
+\chapter{File Documentation}
+\input{main_8cpp}
 %--- End generated contents ---
 % Index
   \backmatter
